--- a/index.html
+++ b/index.html
@@ -12,24 +12,12 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<style>
-		body {
-		  margin: 0;
-		  font-size: 28px;
-		  font-family: Arial, Helvetica, sans-serif;
-		}
-
-		.header {
-		  background-color: #f1f1f1;
-		  padding: 30px;
-		  text-align: center;
-		}
-
-		#navbar {
+		#topnav {
 		  overflow: hidden;
 		  background-color: #333;
 		}
 
-		#navbar a {
+		#topnav a {
 		  float: left;
 		  display: block;
 		  color: #f2f2f2;
@@ -39,12 +27,12 @@
 		  font-size: 17px;
 		}
 
-		#navbar a:hover {
+		#topnav a:hover {
 		  background-color: #ddd;
 		  color: black;
 		}
 
-		#navbar a.active {
+		#topnav a.active {
 		  background-color: #04AA6D;
 		  color: white;
 		}
@@ -178,6 +166,10 @@
 							▶️ <strong>Tech Stack 👨‍💻</strong>| Git • VSCode • PyCharm • Sublime Text • Jupyter • Google Collab<br />
 							▶️ <strong>Soft Skills 👬</strong>| Communication • Presentation • Flexibility<br />
 							▶️ <strong>Work ethics 👷‍♂️</strong>| Figure out • Work hard and smart • Perfectionism<br /></p>
+							
+							<div>
+						    		<a href="Anitya_Gangurde_ml.pdf" class="button button-shadow button-zoom" download>Download Resume</a>
+							</div>
 						</div>
 					</section>
 					<section id="aiml">
@@ -229,9 +221,7 @@
 							<p>The project is a Machine Learning api, deployed on Heroku, which implements Logistic Regression to predict whether you would survive the Titanic disaster. The api is made with Flask using python. The project includes a model to predict the survival given three inputs.</p>
 						    </article>
 						</div>
-						<div>
-						    <a href="Anitya_Gangurde_ml.pdf" class="button button-shadow button-zoom" download>Download Resume For This</a>
-						</div>
+						
 					</section>
 					<section id="analytics">
 						<h2>Data Analysis Projects</h2>
@@ -272,9 +262,6 @@
 							<span class="label tag shadow">MS-Excel</span><span class="label tag shadow">Google Sheets</span>
 							<p>This Excel file showcases a case study done on Google Sheets to give out incentives to different managers based on sales and giving out strategies for increasing the sales next month.</p>
 						    </article>
-						</div>
-						<div>
-						    <a href="Anitya_Gangurde_da.pdf" class="button button-shadow button-zoom" download>Download Resume For This</a>
 						</div>
 				    	</section>
 					<section id="blogs">
