--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="index.html"><img class="image avatar hover-shadow zoom" src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Anitya Gangurde, </strong>a self-taught pythonista and an ML Enthusiast with interests in writing and developing ML/DL apps.</h1><br>
+					<h1><strong>I am Anitya Gangurde, </strong>a self-taught ML Enthusiast with interests in AI, technology and startups.</h1><br>
 				</div>
 			</header>
 
@@ -79,9 +79,9 @@
 						<header class="major">
 							<h2>Welcome to my portfolio website where you can find all my recent projects and certifications.</h2>
 						</header>
-						<p>Hello, I am Anitya. I like working with computers and using them to solve complex problems. That's why the field of Data Science is of particular interest to me as it combines both of these things, computers and critical problem-solving. Currently, I am still learning and understanding how all parts of data science come into play in the real world.</p>
+						<p>Hello, I am Anitya. I like working with computers and using them to solve complex problems. That's why the field of Data Science and Machine Learning is of particular interest to me as it combines both of these things, computers and critical problem-solving. Currently, I am still learning and understanding how all parts of data science come into play in the real world.</p>
 						<p>Education: <strong>Bachelors in Mechanical Engineering, from MET's Institute of Engineering, Nashik</strong></p>
-						<p>Currently working as: <strong>Asso. Technical Product Manager (Machine Learning) at Revca</strong></p>
+						<p>Currently working as: <strong>Technical Product Owner at Revca</strong></p>
 					</section>
 					<section class="hacker-badges" id="badges">
 						<header class="section-card-header">
@@ -148,6 +148,7 @@
 						</div></a></li>
 						
 						<li><br><br><img class="zoom images" src="https://www.codewars.com/users/AGans01/badges/large"></li><br>
+							<p>Kaggle 2x Expert: Notebooks and Discussions. Check <a href="https://www.kaggle.com/anityagangurde">Kaggle</a>.</p><br>
 						</ul>
 					</section>
 					<section class="hacker-badges">
