--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 						</div></a></li>
 						
 						<li><br><br><img class="zoom images" src="https://www.codewars.com/users/AGans01/badges/large"></li><br>
-							<p>Kaggle 2x Expert: Notebooks and Discussions. Check <a href="https://www.kaggle.com/anityagangurde">Kaggle</a>.</p><br>
 						</ul>
+						<ul><p>Kaggle 2x Expert: Notebooks and Discussions. Check <a href="https://www.kaggle.com/anityagangurde">Kaggle</a>.</p><br></ul>
 					</section>
 					<section class="hacker-badges">
 						<div class="inner" style="align-content: left;">
