--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
 				<!-- Navigation -->
 				<header>
 					<div class="topnav">
-					  	<a href="javascript:void(0);">Home</a>
-						<a href="javascript:void(0);">AI & ML</a>
-					  	<a href="javascript:void(0);">Analytics</a>
-					  	<a href="javascript:void(0);">Blogs</a>
-					  	<a href="javascript:void(0);">Certifications</a>
-					  	<a href="javascript:void(0);">Get In Touch</a>
+					  	<a href="#">Home</a>
+						<a href="#aiml">AI & ML</a>
+					  	<a href="#analytics">Analytics</a>
+					  	<a href="#blogs">Blogs</a>
+					  	<a href="#certifications">Certifications</a>
+					  	<a href="#contact">Get In Touch</a>
 					</div>
 				</header>
 				<!-- One -->
