--- a/product.html
+++ b/product.html
@@ -132,6 +132,17 @@
 						</div>
 						
 					</section>
+	    <section id="four">
+                        <h2>Certifications</h2>
+                        <div class="row">
+                            <article class="col-6 col-12-xsmall work-item">
+                                <img id="GUXD" src="images/certs/GXUD.jpg" class="image fit thumb zoom hover-shadow cursor" alt="" onclick="openModal();currentSlide(6)" />
+                                <h3>Google: UX Design Course</h3>
+                                <p>UXD course from Google, currently ongoing.</p>
+                            </article>
+                            
+                        </div>
+                    </section>
 
 
         <!-- Footer -->
