--- a/contact.html
+++ b/contact.html
@@ -26,10 +26,9 @@
                 <!-- Navigation -->
                     <div class="topnav">
                         <a href="index.html">Home</a>
-                        <a href="aiml.html">AI & ML</a>
-                        <a href="analytics.html">Analytics</a>
+                        <a href="product.html">Product Profile</a>
+                        <a href="aiml.html">ML Profile</a>
                         <a href="blogs.html">Blogs</a>
-                        <a href="certifications.html">Certifications</a>
                         <a class="active" href="contact.html">Get In Touch</a>
                     </div>
 
