--- a/product.html
+++ b/product.html
@@ -31,7 +31,13 @@
                         <a href="blogs.html">Blogs</a>
                         <a href="contact.html">Get In Touch</a>
                     </div>
-/*
+		    <section id="one">
+			<header class="major">
+				<h2>This page showcases my prowess in the product management side of things.</h2>
+			</header>
+			<p>The product side was an interesting exploration for me and the roles within completely and truly align with my aura and personality. Check out my work in the product management side.</p>
+		</section>
+	/*
             <section class="hacker-badges" id="badges">
 						<header class="section-card-header">
 							<svg viewBox="0 0 24 24" width="1.5em" height="1.5em" class="section-card-icon ui-svg-icon" fill="currentColor"><path d="M12 15.7c-4.1 0-7.4-3.3-7.4-7.4C4.6 4.3 7.9 1 12 1s7.4 3.3 7.4 7.4c0 4-3.3 7.3-7.4 7.3zM12 3C9 3 6.6 5.4 6.6 8.4c0 3 2.4 5.4 5.4 5.4 3 0 5.4-2.4 5.4-5.4C17.4 5.4 15 3 12 3z"></path><path d="M16.5 23c-.2 0-.4 0-.5-.1l-4-2.4-4 2.4c-.3.2-.7.2-1.1 0-.3-.2-.5-.6-.4-1l1.1-8.3c.1-.5.6-.9 1.1-.9.5.1.9.6.9 1.1L8.8 20l2.8-1.7c.3-.2.7-.2 1 0l2.8 1.7-.8-6.2c-.1-.5.3-1.1.9-1.1.6-.1 1.1.3 1.1.9l1.1 8.3c.1.4-.1.8-.4 1-.4 0-.6.1-.8.1z"></path></svg>
