--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
 						<h2>Recent Blogs</h2>
 						<div class="row">
 						    <article class="col-6 col-12-xsmall work-item">
-							<a href="blog1.html" class="image fit zoom read hover-shadow"><img src="images/fulls/blog1.jpg" alt="" /></a>
-							<h3>How to approach any Data Science problem?</h3>
-							<span class="label tag shadow">Machine Learning</span><span class="label article shadow">Blog</span>
+							<a href="https://medium.com/@revca-technologies/yolov6-explained-in-simple-terms-c46a0248bddc" class="image fit zoom read hover-shadow"><img src="images/fulls/yolo.jpg" alt="" /></a>
+							<h3>YOLOv6: Explanations, Features & Implementation</h3>
+							<span class="label tag shadow">Machine Learning</span><span class="label article shadow">Blog</span><span class="label article shadow">6K+ Views</span>
 						    </article>
 						    <article class="col-6 col-12-xsmall work-item">
-							<a href="blog2.html" class="image fit zoom read hover-shadow"><img src="images/fulls/blog2.jpg" alt="" /></a>
-							<h3>How confusion matrices are useful in Machine Leaning?</h3>
-							<span class="label tag shadow">Machine Learning</span><span class="label tag shadow">Statistics</span><span class="label article shadow">Blog</span>
+							<a href="https://medium.com/@revca-technologies/chatgpt-theory-and-implementation-d2f5a831afbe" class="image fit zoom read hover-shadow"><img src="images/fulls/cgpt.jpg" alt="" /></a>
+							<h3>ChatGPT: Theory & Implementation</h3>
+							<span class="label tag shadow">NLP</span><span class="label tag shadow">ChatGPT</span><span class="label article shadow">Blog</span>
 						    </article>
 						</div>
 						<ul class="actions">
