--- a/product.html
+++ b/product.html
@@ -33,7 +33,7 @@
                     </div>
 		    <section id="one">
 			<header class="major">
-				<h2>This page showcases my prowess in the product management side of things.</h2>
+				<h2>Check out my work in the Product management side.</h2>
 			</header>
 			<p>The product side was an interesting exploration for me and the roles within completely and truly align with my aura and personality. Check out my work in the product management side.</p>
 		</section>
