--- a/blogs.html
+++ b/blogs.html
@@ -16,7 +16,7 @@
             <header id="header">
                 <div class="inner">
                     <a href="index.html"><img class="image avatar hover-shadow zoom" src="images/avatar.jpg" alt="" /></a>
-		    <h1><strong>I am Anitya Gangurde, </strong>a self-taught pythonista and an ML Enthusiast with interests in writing and developing ML/DL apps.</h1><br>
+		    <h1><strong>I am Anitya Gangurde, </strong>a self-taught ML Enthusiast with interests in AI, products and startups.</h1><br>
                 </div>
             </header>
 
@@ -45,6 +45,16 @@
                                 <h3>How confusion matrices are useful in Machine Leaning?</h3>
                                 <span class="label tag shadow">Machine Learning</span><span class="label tag shadow">Statistics</span><span class="label article shadow">Blog</span>
                             </article>
+			<article class="col-6 col-12-xsmall work-item">
+				<a href="https://medium.com/@revca-technologies/yolov6-explained-in-simple-terms-c46a0248bddc" class="image fit zoom read hover-shadow"><img src="images/fulls/yolo.jpg" alt="" /></a>
+				<h3>YOLOv6: Explanations, Features & Implementation</h3>
+				<span class="label tag shadow">Machine Learning</span><span class="label article shadow">Blog</span><span class="label article shadow">6K+ Views</span>
+			    </article>
+			    <article class="col-6 col-12-xsmall work-item">
+				<a href="https://medium.com/@revca-technologies/chatgpt-theory-and-implementation-d2f5a831afbe" class="image fit zoom read hover-shadow"><img src="images/fulls/cgpt.jpg" alt="" /></a>
+				<h3>ChatGPT: Theory & Implementation</h3>
+				<span class="label tag shadow">NLP</span><span class="label tag shadow">ChatGPT</span><span class="label article shadow">Blog</span>
+			    </article>
                         </div>
                         <ul class="actions">
                             <li><a href="https://anityagan9urde.medium.com/" class="button button-shadow button-zoom">View More On Medium</a></li>
