--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<!-- Navigation -->
 				<header>
 					<div class="topnav">
-					  	<a href="#">Home</a>
+					  	<a class="active" href="#">Home</a>
 						<a href="product.html">Product Profile</a>
 						<a href="aiml.html">ML Profile</a>
 					  	<a href="blogs.html">Blogs</a>
