--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
 						<header class="major">
 							<h2>Welcome to my portfolio website where you can find all my recent projects and certifications.</h2>
 						</header>
-						<p>Hello, I am Anitya. I like working with computers and using them to solve complex problems. That's why the field of Data Science and Machine Learning is of particular interest to me as it combines both of these things, computers and critical problem-solving. Currently, I am still learning and understanding how all parts of data science come into play in the real world.</p>
+						<p>Hello world, I am Anitya. As an avid learner, I take pleasure in connecting concepts and exploring different facets of the world - from technology to social and economic trends. I am highly motivated by the prospect of working independently or within a small team, and I thrive in start-up environments due to the raw and uncertain nature they offer.
+
+I am passionate about using artificial intelligence and technology to improve the human experience, eradicating issues such as poverty and hunger, and fostering evolution toward a better world. Being a part of this process is my ultimate goal, which is why I am pursuing a career that aligns with these values.
+
+Currently, as a product person, I have found my calling. The field is highly aligned with my personality, and it always keeps me challenged. I am passionate about collaborating with multiple stakeholders and users to understand their needs and delivering something of value in the end.</p>
 						<p>Education: <strong>Bachelors in Mechanical Engineering, from MET's Institute of Engineering, Nashik</strong></p>
 						<p>Currently working as: <strong>Technical Product Owner at Revca</strong></p>
 					</section>
