--- a/index.html
+++ b/index.html
@@ -80,12 +80,10 @@
 						</header>
 						<p>Hello world, I am Anitya.</p>
 						<p>As an avid learner, I take pleasure in connecting concepts and exploring different facets of the world - from technology to social and economic trends. I am highly motivated by the prospect of working independently or within a small team, and I thrive in start-up environments due to the raw and uncertain nature they offer.<br><br>
-
-I am passionate about using artificial intelligence and technology to improve the human experience, eradicating issues such as poverty and hunger, and fostering evolution toward a better world. Being a part of this process is my ultimate goal, which is why I am pursuing a career that aligns with these values.<br><br>
-
-Currently, as a product person, I have found my calling. The field is highly aligned with my personality, and it always keeps me challenged. I am passionate about collaborating with multiple stakeholders and users to understand their needs and delivering something of value in the end.</p>
-						<p>Education: <strong>Bachelors in Mechanical Engineering, from MET's Institute of Engineering, Nashik</strong></p>
-						<p>Currently working as: <strong>Technical Product Owner at Revca</strong></p>
+							I am passionate about using artificial intelligence and technology to improve the human experience, eradicating issues such as poverty and hunger, and fostering evolution toward a better world. Being a part of this process is my ultimate goal, which is why I am pursuing a career that aligns with these values.<br><br>
+							Currently, as a product person, I have found my calling. The field is highly aligned with my personality, and it always keeps me challenged. I am passionate about collaborating with multiple stakeholders and users to understand their needs and delivering something of value in the end.</p>
+						<h4>Education:</h4> <p><strong>Bachelors in Mechanical Engineering, from MET's Institute of Engineering, Nashik</strong></p>
+						<h4>Currently working as:</h4><p> <strong>Technical Product Owner at Revca</strong></p>
 					</section>
 					<section id="blogs">
 						<h2>Recent Blogs</h2>
