--- a/blogs.html
+++ b/blogs.html
@@ -55,6 +55,11 @@
 				<h3>ChatGPT: Theory & Implementation</h3>
 				<span class="label tag shadow">NLP</span><span class="label tag shadow">ChatGPT</span><span class="label article shadow">Blog</span>
 			    </article>
+			    <article class="col-6 col-12-xsmall work-item">
+                                <a href="https://anityagan9urde.medium.com/what-is-bloom-2aedf7383aac" class="image fit zoom read hover-shadow"><img src="images/fulls/bloom.jpg" alt="" /></a>
+                                <h3>BLOOM: A Text Generative Large Language Model for 46+ languages!</h3>
+                                <span class="label tag shadow">Machine Learning</span><span class="label article shadow">Blog</span><span class="label article shadow">NLP</span>
+                            </article>
                         </div>
                         <ul class="actions">
                             <li><a href="https://anityagan9urde.medium.com/" class="button button-shadow button-zoom">View More On Medium</a></li>
