--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<header>
 					<div class="topnav">
 					  	<a class="active" href="#">Home</a>
-						<a href="product.html">Product Profile</a>
+						<a href="portfolio.html">Product Profile</a>
 						<a href="aiml.html">ML Profile</a>
 					  	<a href="blogs.html">Blogs</a>
 					  	<a href="contact.html">Get In Touch</a>
