--- a/porfolio.html
+++ b/porfolio.html
@@ -157,7 +157,7 @@
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btn btn-primary py-4 px-5">Download Resume</a></p>
+    				<p><a href="product_resume.pdf" class="btn btn-primary py-4 px-5" download>Download Resume</a></p>
     			</div>
     		</div>
     	</div>
