--- a/research-thing.html
+++ b/research-thing.html
@@ -51,7 +51,7 @@
 	        <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
 	          	<div>
-	          		<img src="images/labcap_showcase.png" width = "1100" height = "700" align="right">
+	          		<img src="images/LabCap_showcase.png" width = "1100" height = "700" align="right">
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '150%' }">
 		          	<div class="text">
