--- a/research-thing.html
+++ b/research-thing.html
@@ -369,12 +369,13 @@
     				<br>
 		            <h2 class="mb-4">User Journey</h2>
 	    					<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(../images/UserJourney1.png);"></div>
-	    					<img  class="img align-self-stretch" src="images/UserJourney1.png" width = "1200" height = "900">
+	    					<img  class="img align-self-stretch" src="images/UserJourney2.png" width = "1200" height = "900">
 
 		        <br>
     				<br>
 		            <h2 class="mb-4">Wireframes</h2>
 		            <img  class="img align-self-stretch" src="images/wireframe_1.png" width = "1200" height = "450"><br><br>
+			    <img  class="img align-self-stretch" src="images/wireframe_2.png" width = "1200" height = "450"><br><br>
 		            <h2 class="mb-4">High Fidelity Prototype</h2>
 	    					<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1000" height="900" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FSN5kZZykoIwKdu4dSvmyID%2FResearch_Fund%3Ftype%3Ddesign%26node-id%3D10-248%26t%3DC7U0EpEKSnuySn4A-1%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D10%253A248%26mode%3Ddesign" allowfullscreen></iframe>
 
@@ -391,7 +392,7 @@
             <h2 class="mb-4">Development</h2>
             <p>A plan to get the MVP developed as quickly as possible.</p>
           </div>
-          <img  class="img align-self-stretch" src="images/timeline.png" width = "1100" height = "375">
+          <img  class="img align-self-stretch" src="images/labcap_roadmap.png" width = "1100" height = "375">
 
 	        </div>
 	        <center>
