--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
 		            <h2 class="mb-4">About Me</h2>
 		            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
-		            	<li class="d-flex"><span>Name:</span> <span>Anitya Gangurde/span></li>
+		            	<li class="d-flex"><span>Name:</span> <span>Anitya Gangurde</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>May 16, 1999</span></li>
 		            	<li class="d-flex"><span>Address:</span> <span>Nashik MH INDIA</span></li>
 		            	<li class="d-flex"><span>Zip code:</span> <span>422004</span></li>
