--- a/real-dating-app.html
+++ b/real-dating-app.html
@@ -237,7 +237,7 @@
 		    					<table>
 		    							<thead>
 		    								<tr>
-		    									<td><h2>Primarily young depressed people</h2></td>
+		    									<td><h2>Primarily young 'lonie' people</h2></td>
 		    								</tr>
 		    							</thead>
 		    							<tbody>
