--- a/research-thing.html
+++ b/research-thing.html
@@ -88,7 +88,8 @@
 								-> It helps excel and progress scientific research forward and removes the barrier of budgets from scientific discoveries.<br>
 
 								</p><br>
-
+								<img  class="img align-self-stretch" src="images/Labcap_intro.png" width = "1200" height = "900">
+				  <br>
 		            <h2 class="mb-4">Problem Statement</h2>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Limited Funding
