--- a/research-thing.html
+++ b/research-thing.html
@@ -88,8 +88,8 @@
 								-> It helps excel and progress scientific research forward and removes the barrier of budgets from scientific discoveries.<br>
 
 								</p><br>
-								<img  class="img align-self-stretch" src="images/Labcap_intro.png" width = "1200" height = "700">
-				  <br>
+<!-- 								<img  class="img align-self-stretch" src="images/Labcap_intro.png" width = "1200" height = "700">
+				  <br> -->
 		            <h2 class="mb-4">Problem Statement</h2>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Limited Funding
@@ -370,7 +370,7 @@
     				<br>
 		            <h2 class="mb-4">User Journey</h2>
 	    					<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(../images/UserJourney1.png);"></div>
-	    					<img  class="img align-self-stretch" src="images/UserJourney2.png" width = "1200" height = "850">
+	    					<img  class="img align-self-stretch" src="images/UserJourney2.png" width = "1200" height = "800">
 
 		        <br>
     				<br>
