--- a/research-thing.html
+++ b/research-thing.html
@@ -378,7 +378,7 @@
 		            <img  class="img align-self-stretch" src="images/wireframe_1.png" width = "1200" height = "450"><br><br>
 			    <img  class="img align-self-stretch" src="images/wireframe_2.png" width = "1200" height = "450"><br><br>
 		            <h2 class="mb-4">High Fidelity Prototype</h2>
-				<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1200" height="800" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FSN5kZZykoIwKdu4dSvmyID%2FResearch_Fund%3Fnode-id%3D414-1580%26t%3DZYZTUTjzPYYe4FaZ-1%26scaling%3Dscale-down%26content-scaling%3Dfixed%26page-id%3D414%253A1189" allowfullscreen></iframe>    		</div>
+				<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1200" height="800" src="https://www.figma.com/proto/SN5kZZykoIwKdu4dSvmyID/Research_Fund?node-id=9-38&t=sPQMFEQLqccoeOQG-1&scaling=scale-down&content-scaling=fixed&device-frame=0" allowfullscreen></iframe>    		</div>
     	</div>
     </section>
 
